--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="howler.min.js" type="text/javascript"></script>
-    <script src="animationsArray2.js" type="text/javascript"></script>
+    <script src="howler.js" type="text/javascript"></script>
+    <script src="marthanimations.js" type="text/javascript"></script>
+    <script src="ecbmarth.js" type="text/javascript"></script>
+    <script src="puffanimations4.js" type="text/javascript"></script>
+    <script src="ecbpuff.js" type="text/javascript"></script>
     <script src="main.min.js" type="text/javascript"></script>
     <link href="fighter.min.css" rel="stylesheet"/>
   </head>
@@ -11,7 +14,7 @@
     <div id="display">
     <canvas id="gameCanvas" width="1200" height ="750"></canvas>
     <div id="tagTextContainer"><textarea id="pTagEdit0" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit1" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit2" class="pTagEdit" maxlength="10"></textarea><textarea id="pTagEdit3" class="pTagEdit" maxlength="10"></textarea></div>
-    <div id="customStageContainer"><div id="cStageTitle"><p>Give this to schmoo</p></div><textarea id="cStageEdit"></textarea><div id="cStagePrompt"><p>Press A to close</p></div></div>
+    <div id="customStageContainer"><div id="cStage1"><div id="cStageTitle"><p><span id="cStageTitleEdit">Share this code</span></p></div><textarea id="cStageEdit"></textarea></div><div id="cStage2"><div id="cStageInfo"><p><span id="cStageInfoEdit"></span></p></div><div id="cStagePrompt"><p>Finish</p><div id="aButton"><p>A</p></div></div></div></div>
     <div id="debug">
       <div id="renderingTime"><p>Rendering: avg: <span id="renderAvg">0</span>ms | high: <span id="renderHigh">0</span>ms | low :<span id="renderLow">0</span>ms | PeakCount: <span id="renderPeak">0</span></p></div>
       <div id="gamelogicTime"><p>GameLogic: avg: <span id="gamelogicAvg">0</span>ms | high: <span id="gamelogicHigh">0</span>ms | low :<span id="gamelogicLow">0</span>ms | PeakCount: <span id="gamelogicPeak">0</span></p></div>
@@ -28,13 +31,16 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -43,10 +49,12 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -59,13 +67,16 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -74,10 +85,12 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -90,13 +103,16 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="cross">X</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -105,10 +121,12 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -121,13 +139,16 @@
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -136,10 +157,12 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -147,18 +170,21 @@
         </div>
         <div class="controllerBox">
           <div class="controllerName"><p>Xbox 360 Controller</p></div>
-          <div class="controllerDriver"><p><span class="driver">Coming Soon</span></p></div>
+          <div class="controllerDriver"><p><span class="native">Native</span></p></div>
           <div class="controllerBrowser">
             <div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/chrome.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/firefox.png"/></div>
               <div class="browserSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/safari.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="browserBox">
+            </div><!--
+            --><div class="browserBox">
               <div class="browserImg"><img class="browserImgFile" src="assets/browser-icons/edge.png"/></div>
               <div class="browserSupport"><p><span class="unknown">?</span></p></div>
             </div>
@@ -167,10 +193,12 @@
             <div class="osBox osBoxWide">
               <div class="osName osNameWide"><p>Windows</p></div>
               <div Class="osSupport"><p><span class="tick">✔</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Mac</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
-            </div><div class="osBox osBoxShort">
+            </div><!--
+            --><div class="osBox osBoxShort">
               <div class="osName osNameShort"><p>Linux</p></div>
               <div Class="osSupport"><p><span class="unknown">?</span></p></div>
             </div>
